# WebServer

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  cloud_config  config  main.py  simple_config
cmake/: CodeCoverageReportConfig.cmake
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
files/: a.txt  c.html  e.html  f.html  g.html
files1/: a.txt
include/: CRUDHandler.h  EchoHandler.h  EntityDatabase.h  GeneratorHandler.h  HealthHandler.h  ISessionFactory.h  LoggingUtility.h  NotFoundHandler.h  RequestHandler.h  RequestHandlerFactory.h  SessionFactory.h  SleepRequestHandler.h  StaticFileHandler.h  config_parser.h  server.h  session.h
integration_tests/: integration_test1.sh  integration_test2.sh  integration_test3.sh  integration_test4.sh  integration_tests.sh
integration_tests/test_responses/: expected_404_response  expected_static_response1  expected_static_response2  expected_static_response3
src/: CRUDHandler.cc  EchoHandler.cc  EntityDatabase.cc  GeneratorHandler.cc  HealthHandler.cc  NotFoundHandler.cc  RequestHandlerFactory.cc  SleepRequestHandler.cc  StaticFileHandler.cc  config_parser.cc  config_parser_main.cc  generator.py  server.cc  server_main.cc  session.cc  test_request.txt
tests/: CRUDHandler_test.cc  EchoHandler_test.cc  EntityDatabaseTest.cc  Generatorhandler_test.cc  HealthHandler_test.cc  NotFoundHandlerTest.cc  RequestHandlerFactoryTest.cc  SleepRequestHandler_test.cc  config_parser_test.cc  example_config  expected_echo_response1  expected_response1  expected_response2  expected_static_response1  expected_static_response2  expected_static_response3  extra_left_brac  integration_test.sh  integration_test1.sh  integration_test2.sh  integration_tests.sh  miss_right_brac  nested_loop_config  server_test.cc  session_test.cc  static_file_handler_test.cc  static_file_test.cc  test_port_number
tests/test_configs/: example_config  expected_echo_response2  extra_left_brac  extra_right_brac  miss_left_brac  miss_right_brac  nest_loop  string_port  test_config
